Same width for all proposals; Fix title overflow

--- a/public/stylesheets/calendar.css
+++ b/public/stylesheets/calendar.css
@@ -176,17 +176,21 @@ i.glyphicon.uncertain:before {
 }
 
 .proposal span.btn {
-  text-align: left;
-  white-space: normal;
+  text-align  : left;
+  white-space : normal;
+  width       : 100%;
 }
 
 .proposal h3 {
-  font-weight    : normal;
-  font-size      : 14px;
-  border         : none;
-  padding-bottom : 0;
-  margin-bottom  : 3px;
-  color          : #252525;
+  font-weight      : normal;
+  font-size        : 14px;
+  border           : none;
+  padding-bottom   : 0;
+  margin-bottom    : 3px;
+  color            : #252525;
+  overflow         : hidden;
+  text-overflow    : ellipsis;
+  -o-text-overflow : ellipsis;
 }
 
 .proposal .participants {
